# Tesla_Stock_Price_Prediction

./: README.md  app.py  pyproject.toml
model/: lstm_model.h5  rnn_model.h5
notebook/: tesla_analysis.ipynb
static/: style.css
style/: design.css
templates/: index.html
utils/: predictor.py  preprocess.py
